--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style/spinner.css" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <script src="js/main.js" defer></script>
-    <title>CodeAnalyzer</title>
+    <title>Summarizer</title>
   </head>
   <body>
     <header>
       <a href="/">
-        <img src="/images/CodeAnalyzer-logo.png" alt="titcotour logo" />
+        <img src="/images/CodeAnalyzer-logo.png" alt="summarizer logo" />
       </a>
     </header>
 
