change placeholders dynamicaly

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
         <section class="properEnglish">
           <form id="image-form">
             <h2 id="title">Summarize Text</h2>
-
             <div class="form-control">
               <select name="selection" id="selection">
                 <option selected value="summarize">Summarize</option>
+                <option value="blogTopic">Blog Intro</option>
                 <option value="blogIntro">Blog Intro</option>
                 <option value="blogBody">Blog Body</option>
                 <option value="blogOutro">Blog Outro</option>
