--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,30 @@
           <form id="image-form">
             <h2 id="title">Summarize Text</h2>
             <div class="form-control">
-              <select name="selection" id="selection">
-                <option selected value="summarize">Summarize</option>
-                <option value="blogTopic">Blog Intro</option>
-                <option value="blogIntro">Blog Intro</option>
-                <option value="blogBody">Blog Body</option>
-                <option value="blogOutro">Blog Outro</option>
-              </select>
+              <label for="selection"
+                >Type:
+                <select name="selection" id="selection">
+                  <option selected value="summarize">Summarize</option>
+                  <option value="blogIntro">Blog Intro</option>
+                  <option value="blogBody">Blog Body</option>
+                  <option value="blogOutro">Blog Outro</option>
+                </select>
+              </label>
+              <label for="selection" id="toneOfVoiceLabel"
+                >Tone-of-Voice (Optional)
+                <select name="selection" id="toneOfVoice">
+                  <option selected value="default">Default</option>
+                  <option value="formal">Formal</option>
+                  <option value="persuasive">Persuasive</option>
+                  <option value="motivational">Motivational</option>
+                  <option value="humorous">Humorous</option>
+                  <option value="conversational">Conversational</option>
+                </select>
+              </label>
+              <label for="keywords" id="keywordsLabel"
+                >Keywords (Optional)
+                <input type="text" id="keywords" placeholder="AI, Agriculture, Tourism etc."/>
+              </label>
               <label for="prompt"
                 >Enter Text:
                 <textarea
@@ -55,11 +72,16 @@
               rows="30"
             ></textarea>
           </div>
+          <div class="buttonDiv">
+            <button type="button" id="copyBtn">Copy to Clipboard</button>
+          </div>
         </section>
       </div>
     </main>
     <footer>
-      <a href="https://github.com/Hergelink" target="_blank">Created by Hergelink</a>
+      <a href="https://github.com/Hergelink" target="_blank"
+        >Created by Hergelink</a
+      >
     </footer>
 
     <div class="spinner"></div>
