added re-generate button and fixed a minor css issue

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,7 @@
           </div>
           <div class="buttonDiv">
             <button type="button" id="copyBtn">Copy to Clipboard</button>
+            <button type="button" id="re-generateBtn">re-generate</button>
           </div>
         </section>
       </div>
