added a comment for a feature to-do

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,11 @@
               </label>
               <label for="keywords" id="keywordsLabel"
                 >Keywords (Optional)
-                <input type="text" id="keywords" placeholder="AI, Agriculture, Tourism etc."/>
+                <input
+                  type="text"
+                  id="keywords"
+                  placeholder="AI, Agriculture, Tourism etc."
+                />
               </label>
               <label for="prompt"
                 >Enter Text:
@@ -84,7 +88,6 @@
         >Created by Hergelink</a
       >
     </footer>
-
     <div class="spinner"></div>
   </body>
 </html>
