--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,22 @@
                   placeholder="AI, Agriculture, Tourism etc."
                 />
               </label>
+              <div class="sliderContainer">
+                <div class="sliderlabel">
+                  <h3>Deterministic</h3>
+                  <h3>Creative</h3>
+                </div>
+
+                <input
+                  type="range"
+                  min="0"
+                  max="1"
+                  value="0.5"
+                  step="0.01"
+                  class="slider"
+                  id="myRange"
+                />
+              </div>
               <label for="prompt"
                 >Enter Text:
                 <textarea
