added blog topic generator and made the output served as an ordered list

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
                 >Type:
                 <select name="selection" id="selection">
                   <option selected value="summarize">Summarize</option>
+                  <option value="blogTopic">Blog Topic</option>
                   <option value="blogIntro">Blog Intro</option>
                   <option value="blogBody">Blog Body</option>
                   <option value="blogOutro">Blog Outro</option>
