added notes to to-do list

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <script src="js/main.js" defer></script>
     <title>My AI Helper</title>
+    <!-- texteditor -->
   </head>
   <body>
     <header>
