--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <script src="js/main.js" defer></script>
     <title>My AI Helper</title>
-    <!-- texteditor -->
   </head>
   <body>
     <header>
@@ -32,9 +31,10 @@
                   <option value="blogIntro">Blog Intro</option>
                   <option value="blogBody">Blog Body</option>
                   <option value="blogOutro">Blog Outro</option>
+                  <option value="paraphraser">Paraphraser</option>
                 </select>
               </label>
-              <label for="selection" id="toneOfVoiceLabel"
+              <label for="toneOfVoice" id="toneOfVoiceLabel"
                 >Tone-of-Voice (Optional)
                 <select name="selection" id="toneOfVoice">
                   <option selected value="default">Default</option>
