copied index file to a new page called ai-helper and adjusted the routes

--- a/public/ai-helper.html
+++ b/public/ai-helper.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-      <a href="/ai-helper">go to ai helper</a>
+        <h1>AI PAGE</h1>
       <div id="sectionContainer">
         <section class="properEnglish">
           <form id="image-form">
