--- a/public/ai-helper.html
+++ b/public/ai-helper.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/style.css" />
+    <title>My Ai Helper</title>
+    <meta name="description" content="Generate high-quality blog posts and text content with My-Ai-Helper">
+    <link rel="stylesheet" href="style/shared.css">
+    <link rel="stylesheet" href="style/landingPage.css">
+    <link rel="stylesheet" href="style/aiHelper.css" />
     <link rel="stylesheet" href="style/spinner.css" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <script src="js/main.js" defer></script>
-    <title>My Ai Helper</title>
+    
   </head>
   <body>
     <header>
@@ -18,7 +22,6 @@
     </header>
 
     <main>
-        <h1>AI PAGE</h1>
       <div id="sectionContainer">
         <section class="properEnglish">
           <form id="image-form">
@@ -120,10 +123,97 @@
         </section>
       </div>
     </main>
-    <footer>
+    <!-- <footer>
       <a href="https://github.com/Hergelink" target="_blank"
         >Created by Hergelink</a
       >
+    </footer> -->
+    <footer role="contentinfo" class="ui-section-footer">
+      <div class="ui-layout-container">
+        <div class="ui-section-footer__layout ui-layout-flex">
+          <!-- COPYRIGHT -->
+          <p class="ui-section-footer--copyright ui-text-note">
+            <small>&copy; 0000 Uisual</small>
+          </p>
+          <!-- MENU -->
+          <nav
+            role="navigation"
+            class="ui-section-footer--nav ui-section-footer--menu ui-layout-flex"
+          >
+            <a href="#" role="link" aria-label="#" class="ui-text-note"
+              ><small>Features</small></a
+            >
+            <a href="#" role="link" aria-label="#" class="ui-text-note"
+              ><small>Help</small></a
+            >
+            <a href="#" role="link" aria-label="#" class="ui-text-note"
+              ><small>Terms</small></a
+            >
+          </nav>
+          <!-- SOCIAL -->
+          <nav
+            role="navigation"
+            class="ui-section-footer--nav ui-section-footer--social ui-layout-flex"
+          >
+            <a href="#" role="link" aria-label="#">
+              <svg
+                viewBox="0 0 24 24"
+                height="16"
+                width="16"
+                fill="none"
+                stroke="#AEAEAE"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                role="img"
+                aria-label="#"
+              >
+                <path
+                  d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"
+                />
+              </svg>
+            </a>
+            <a href="#" role="link" aria-label="#">
+              <svg
+                viewBox="0 0 24 24"
+                height="16"
+                width="16"
+                fill="none"
+                stroke="#AEAEAE"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                role="img"
+                aria-label="#"
+              >
+                <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
+                <path
+                  d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zM17.5 6.5h.01"
+                />
+              </svg>
+            </a>
+            <a href="#" role="link" aria-label="#">
+              <svg
+                viewBox="0 0 24 24"
+                height="16"
+                width="16"
+                fill="none"
+                stroke="#AEAEAE"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                role="img"
+                aria-label="#"
+              >
+                <circle cx="12" cy="12" r="10" />
+                <path
+                  d="M8.56 2.75c4.37 6.03 6.02 9.42 8.03 17.72m2.54-15.38c-3.72 4.35-8.94 5.66-16.88 5.85m19.5 1.9c-3.5-.93-6.63-.82-8.94 0-2.58.92-5.01 2.86-7.44 6.32"
+                />
+              </svg>
+            </a>
+          </nav>
+        </div>
+      </div>
     </footer>
     <div class="spinner"></div>
   </body>
