seperated landing page and ai helper page css files

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
     />
-    <link rel="stylesheet" href="style/shared.css" />
     <link rel="stylesheet" href="style/landingPage.css" />
     <!-- above pasted -->
     <meta charset="UTF-8" />
@@ -43,27 +42,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <!-- <header>
-      <a href="/">
-        <img src="/images/my-ai-helper-logo.png" alt="summarizer logo" />
-      </a>
-    </header> -->
-    <!-- <main>
-      <a href="/ai-helper">go to ai helper</a>
-    </main> -->
-    <!-- <footer>
-      <a href="https://github.com/Hergelink" target="_blank"
-        >Created by Hergelink</a
-      >
-    </footer> -->
-    <!-- <div class="spinner"></div> -->
-    <!-- PASTED BELOW -->
     <header role="banner" class="ui-section-header">
       <div class="ui-layout-container">
         <div class="ui-section-header__layout ui-layout-flex">
           <!-- LOGO -->
-          <a href="/" role="link" aria-label="#">
-            <img src="/images/my-ai-helper-logo.png" alt="ai helper logo" />
+          <a href="/" role="link" aria-label="site logo link to landing page">
+            <img src="/images/my-ai-helper-logo.png" alt="ai helper logo" class="siteLogo" />
           </a>
           <!-- MENU -->
           <a
