added landing page images

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
           </div>
           <!-- IMAGE -->
           <img
-            src="https://res.cloudinary.com/uisual/image/upload/assets/devices/ipad.png"
+            src="./images/hero-image.jpg"
             loading="lazy"
             alt="#"
             class="ui-section-hero--image"
@@ -131,7 +131,7 @@
           >
             <!-- IMAGE -->
             <img
-              src="https://res.cloudinary.com/uisual/image/upload/assets/devices/ipad.png"
+              src="./images/feature-images/1st-feature.jpg"
               loading="lazy"
               alt="#"
               class="ui-image-half-left"
@@ -208,7 +208,7 @@
             </div>
             <!-- IMAGE -->
             <img
-              src="https://res.cloudinary.com/uisual/image/upload/assets/devices/ipad.png"
+              src="./images/feature-images/2nd-feature.jpg"
               loading="lazy"
               alt="#"
               class="ui-image-half-right"
@@ -219,7 +219,7 @@
           >
             <!-- IMAGE -->
             <img
-              src="https://res.cloudinary.com/uisual/image/upload/assets/devices/ipad.png"
+              src="./images/feature-images/3rd-feature.jpg"
               loading="lazy"
               alt="#"
               class="ui-image-half-left"
@@ -407,7 +407,7 @@
           </div>
           <!-- IMAGE -->
           <img
-            src="https://res.cloudinary.com/uisual/image/upload/assets/devices/ipad-t.png"
+            src="./images/cta-image.jpg"
             loading="lazy"
             alt="#"
             class="ui-section-hero--image"
