added blog outline option and changed blog topic to title

--- a/public/ai-helper.html
+++ b/public/ai-helper.html
@@ -32,7 +32,8 @@
                 >Type:
                 <select name="selection" id="selection">
                   <option selected value="summarize">Summarize</option>
-                  <option value="blogTopic">Blog Topic</option>
+                  <option value="blogTitle">Blog Title</option>
+                  <option value="blogOutline">Blog Outline</option>
                   <option value="blogIntro">Blog Intro</option>
                   <option value="blogBody">Blog Body</option>
                   <option value="blogOutro">Blog Outro</option>
