--- a/public/index.html
+++ b/public/index.html
@@ -430,8 +430,8 @@
             <a href="#featureAnchor" role="link" aria-label="#" class="ui-text-note"
               ><small>Features</small></a
             >
-            <a href="#" role="link" aria-label="#" class="ui-text-note"
-              ><small>Help</small></a
+            <a href="./faq.html" role="link" aria-label="#" class="ui-text-note"
+              ><small>FAQ</small></a
             >
             <a href="#" role="link" aria-label="#" class="ui-text-note"
               ><small>Terms</small></a
