--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
         <div class="ui-section-header__layout ui-layout-flex">
           <!-- LOGO -->
           <a href="/" role="link" aria-label="site logo link to landing page">
-            <img src="/images/my-ai-helper-logo.png" alt="ai helper logo" class="siteLogo" />
+            <img src="./images/logo.png" alt="ai helper logo" class="siteLogo" />
           </a>
           <!-- MENU -->
           <a
