--- a/public/faq.html
+++ b/public/faq.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <a href="/">
-        <img src="./images/my-ai-helper-logo.png" alt="summarizer logo" />
+        <img src="./images/logo.png" alt="summarizer logo" />
       </a>
     </header>
     <main>
