--- a/public/ai-helper.html
+++ b/public/ai-helper.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div>
-        <a href="/">
+        <a href="/" id="logoLink">
           <img src="./images/logo.png" alt="airwrite logo" />
         </a>
       </div>
