--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <meta name="referrer" content="unsafe-url" />
     <meta name="robots" content="index, follow" />
-    <title>My Ai Helper</title>
+    <title>airwrite</title>
     <!-- SPEED -->
     <link rel="preconnect" href="https://res.cloudinary.com" />
     <link rel="dns-prefetch" href="https://res.cloudinary.com" />
